# vscode-remote-debug-example

./: .gitignore  README.md  _quarto.yml
docs/: index.html  search.json
docs/site/: index.html  make-rust.html  manual-rdbg.html  vscode-setup.html  xcomp-rdbg.html
docs/site_libs/bootstrap/: bootstrap-dark.min.css  bootstrap.min.css
rust-proj/: Cargo.toml  gdbserver-setup.sh
rust-proj/.cargo/: config.toml
rust-proj/src/: main.rs
site/: dark-monospace-style.scss  index.qmd  make-rust.qmd  manual-rdbg.qmd  vscode-setup.qmd  xcomp-rdbg.qmd
