[package]
name = "rust-proj"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { version = "0.8.5", features = [ "std", "std_rng" ] }


[profile.release]
opt-level         = 1
debug             = true  # change this to *actual* release
strip             = "none"
debug-assertions  = false
overflow-checks   = false
lto               = false
panic             = 'unwind'
incremental       = true
codegen-units     = 16
rpath             = false


